# pseudo

./: .clangd  Interpreter.py  Makefile  Pseudocode.g4  Pseudocode.interp  Pseudocode.tokens  PseudocodeLexer.interp  PseudocodeLexer.py  PseudocodeLexer.tokens  PseudocodeListener.py  PseudocodeParser.py  PseudocodeVisitor.py  README.md  TODO.md  cleaned.pseudo  test.pseudo
.github/workflows/: release.yml
c-rewrite/: .gitignore  CMakeLists.txt  Makefile  README.md  run_integration_tests.sh
c-rewrite/include/pseudo/: hashmap.h  io.h  linter.h  parser_errors.h  value.h
c-rewrite/integration_tests/: bac
c-rewrite/src/cli/: main.c
c-rewrite/src/common/: CMakeLists.txt  hashmap.c
c-rewrite/src/io/: io_buffered.c
c-rewrite/src/linter/: CMakeLists.txt  linter.c
c-rewrite/src/runtime/: interpreter.c  value.c
c-rewrite/test/: test_linter.c
c-rewrite/tree-sitter-pseudo/: Package.swift  go.mod  setup.py
c-rewrite/tree-sitter-pseudo/bindings/go/: binding.go
c-rewrite/tree-sitter-pseudo/bindings/node/: binding.cc
c-rewrite/tree-sitter-pseudo/bindings/rust/: lib.rs
c-rewrite/tree-sitter-pseudo/queries/: highlights.scm
c-rewrite/tree-sitter-pseudo/test/corpus/: control_flow.txt  edge_cases.txt  expressions.txt
c-rewrite/web/: editor.html  test.html
include/pseudo/: debugger.h  environment.h  equivalence.h  hashmap.h  linter.h  parser.h  runtime.h  runtime_internal.h  string.h  transpiler.h
interpreter/: Interpreter.py  Pseudocode.g4  Pseudocode.interp  PseudocodeLexer.interp  PseudocodeLexer.py  PseudocodeLexer.tokens  PseudocodeListener.py  PseudocodeParser.py  PseudocodeVisitor.py  linter.py
interpreter/.antlr/: Pseudocode.interp  PseudocodeBaseListener.java  PseudocodeLexer.interp  PseudocodeLexer.java  PseudocodeListener.java  PseudocodeParser.java
scripts/: lint_all.sh  linter.bash  pseudo.bash  run_equivalence_tests.sh  run_integration_tests.sh  test.bash
src/cli/: main.c
src/common/: string.c
src/equivalence/: equivalence.c
src/io/: io_buffered.c  io_stdio.c
src/linter/: linter.c
src/parser/: parser.c  parser_errors.c
src/runtime/: debugger.c  environment.c  interpreter.c  value.c
src/transpiler/: transpiler.c  transpiler_collect.c  transpiler_internal.h
src/wasm/: bridge.c
test/: test_linter.c
test-sources/: test.pseudo
test-sources/bac2020/: august.pseudo
test-sources/bac2021/: august.pseudo  iunie.pseudo  model.pseudo  simulare.pseudo  speciala.pseudo
test-sources/bac2022/: august.pseudo  iunie.pseudo  model.pseudo  simulare.pseudo  speciala.pseudo
test-sources/bac2023/: august.pseudo  iunie.pseudo  model.pseudo  simulare.pseudo  speciala.pseudo
test-sources/bac2024/: august.pseudo  iunie.pseudo  model.pseudo  simulare.pseudo  speciala.pseudo
test-sources/bac2025/: iunie-rezerva.pseudo  iunie.pseudo  model.pseudo  simulare.pseudo  speciala.pseudo
tree-sitter-pseudo/: .gitattributes  CMakeLists.txt  Cargo.toml  Makefile  binding.gyp  grammar.js  package.json  pyproject.toml  tree-sitter.json
tree-sitter-pseudo/src/: grammar.json  node-types.json  (+1 more)
vscode-extension/: package.json  pseudocode-ro-0.1.3.vsix
web/: app.js  console-ui.js  docs-editor.md  docs-language.md  docs.html  editor-setup.js  editor.html  files.js  index.html  pseudo-debugger.js  pseudo.js  test-web.html  transpile-pane.js  version.js  wasm-runner.js
(+294 files in other folders)
